--- a/03_decorators_files_regex.ipynb
+++ b/03_decorators_files_regex.ipynb
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d990aa1-d878-4da8-be67-e0476949337e",
+   "id": "316c6067-ccc8-40b7-a2ba-363b7772b1e9",
    "metadata": {},
    "source": [
     "---\n",
@@ -3071,7 +3071,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5257397a-2f8e-4b72-95d9-b8b9fa468027",
+   "id": "9637f293-af64-41d1-88e1-a7bbc93beea8",
    "metadata": {},
    "outputs": [
     {
@@ -3105,7 +3105,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "29238a9d-3338-4be1-865d-dda41c07675c",
+   "id": "d18c60bb-ed4f-469e-b2d2-4893d203adc0",
    "metadata": {},
    "outputs": [
     {
@@ -3142,7 +3142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd7abfc-5922-4fcf-8887-2fa59269445a",
+   "id": "be293f4d-4aed-4f32-b908-69289c04a7b1",
    "metadata": {},
    "source": [
     "### Flask Variable Routes\n",
@@ -3160,7 +3160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3e637c-d75b-487c-b7f2-33dba3bb6c73",
+   "id": "515f8e7e-984c-4524-b140-bc962d5edda6",
    "metadata": {},
    "source": [
     "### Exercise: Personalized Greeting\n",
@@ -3171,7 +3171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ec71bd-9141-4d8d-abc2-61d51818ae05",
+   "id": "569d7548-3c80-43a2-9037-fa435fb86c50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3181,7 +3181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c326f3bf-8186-486e-b7fa-50a3aded8e80",
+   "id": "b9d8e8fc-2fae-4d48-829a-fc52ceee8c09",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3205,7 +3205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e18369-6c88-48e3-a752-faac107e6524",
+   "id": "110348e0-c84f-4a6a-a2db-3a8dbc85c01d",
    "metadata": {},
    "source": [
     "### HTTP Methods\n",
@@ -3223,7 +3223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde0d875-e7ca-4b95-8d42-733c358e1ea8",
+   "id": "c4703df3-cacd-468d-9a8f-47d39fce2b6b",
    "metadata": {},
    "source": [
     "### Exercise: Counter with POST\n",
@@ -3246,7 +3246,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16a04b0e-5622-4fe4-8b93-fe201fa7964f",
+   "id": "5c33277b-fa64-4520-ab40-27234a9dc51b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3256,7 +3256,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "333ab70e-0965-4fdf-94fd-ff87732a482f",
+   "id": "eaf251d3-0cc7-442c-b24f-597e71912c2c",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3306,7 +3306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdee8ab5-accb-487c-94ac-4cf80eb2ebc4",
+   "id": "3e7a5bdf-73ef-4766-a6f7-6d4c275a81b1",
    "metadata": {},
    "source": [
     "### Rendering Templates\n",
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fb8fd4-ced9-4490-aea1-246797741bac",
+   "id": "c34bf746-2311-4ca2-89cd-fa0c18ba321b",
    "metadata": {},
    "source": [
     "### Exercise: Dynamic Product Page\n",
@@ -3343,7 +3343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8030401d-0a3e-45f5-989a-d19aab9c11c0",
+   "id": "c748f0fc-2313-4420-b41e-6d0a0a3b850e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3353,7 +3353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a6e61a-1f4f-4751-8cd8-713ff1cf5744",
+   "id": "88c66fba-ce74-4ba1-9dd4-17b647c1c835",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51eb1dd-fb5e-4c25-9c7d-d8e405c74538",
+   "id": "3d798f96-cba4-4290-b388-8d3f0da28dce",
    "metadata": {},
    "source": [
     "### Login Form\n",
@@ -3409,7 +3409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94676bf5-73cd-46c7-86ab-fbcaf06a97cb",
+   "id": "5fe91549-1e92-4d40-be57-fd95c939c74a",
    "metadata": {},
    "source": [
     "### Exercise: Custom Login Handler\n",
@@ -3420,7 +3420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fdb32f2-87e4-489b-ab94-77a3a5f95730",
+   "id": "d2803684-0a52-4221-bb23-cc2e353eede7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3430,7 +3430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6453f7-e455-4b7d-b0d3-42cbcaee68aa",
+   "id": "7800f4b3-d141-4f40-a94e-38c4a20e1117",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3464,7 +3464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac7951c-c213-4175-a3bc-38f96fb56b5b",
+   "id": "48dd551b-50b7-4df4-8314-c4d423415314",
    "metadata": {},
    "source": [
     "### Cookie Handling\n",
@@ -3490,7 +3490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c8e2636-eb18-4859-8256-6ff061deb4a0",
+   "id": "6c1c49cf-4c95-43b4-95c5-f8377b310975",
    "metadata": {},
    "source": [
     "### Exercise: Remember Me Cookie\n",
@@ -3500,7 +3500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67c4da8-ff6c-49e0-8edb-9f15ebd55ef6",
+   "id": "36b37953-7ec8-4d7b-a0ee-e798dd64be2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3510,7 +3510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da9c7f0-94b9-4dee-8296-b6b01e5ea86a",
+   "id": "451543bc-def6-4a74-9318-96fbc3bbcd2b",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3539,7 +3539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07e481ec-08a8-40cc-bb17-32781afcb19a",
+   "id": "52ff8e01-de5a-4dd1-8ecb-51f61c70667e",
    "metadata": {},
    "source": [
     "### Redirects\n",
@@ -3562,7 +3562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da7f53a-3c75-4cd2-b6f7-d1a9c125f244",
+   "id": "4d2d7225-a1c8-41be-b72c-57afce5d81f3",
    "metadata": {},
    "source": [
     "### Exercise: Redirect Old Profile URL\n",
@@ -3572,7 +3572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6040f8bf-fd10-478d-9123-0107ac148e86",
+   "id": "7c786873-a8f5-4839-8db9-7b01c02acdb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3582,7 +3582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f3aeac0-2318-47dd-ba92-f56f95361f9e",
+   "id": "5d0955e3-b2ba-4a7b-80c4-2c4380abfe33",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3606,7 +3606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7090e5-aea7-4f8f-9414-366f5eb7eb33",
+   "id": "7ab69143-b1f1-4ca4-856c-07cf7aedc03f",
    "metadata": {},
    "source": [
     "### Complex Exercise: User System with Login Protection\n",
@@ -3622,7 +3622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4caa218-e772-4e2c-8942-550317973742",
+   "id": "ae445cb0-0247-4afc-8ffe-c0bbf2e84071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3636,7 +3636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f72746-015f-47fd-8429-f717ba15dabe",
+   "id": "00aed905-c6ed-4779-bb7a-d3983b5577f9",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -3699,14 +3699,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "474a4156-5be6-45c2-84f3-f1f6fc303fb4",
+   "id": "7df5dbe6-07a3-496b-abf7-7ce3044d2a88",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "81abb1c1-f61a-4962-8282-234963705061",
+   "id": "62835519-306b-470d-bc04-11ad5463feca",
    "metadata": {},
    "source": [
     "---\n",
@@ -3767,13 +3767,23 @@
     "def logout():\n",
     "    logout_user()\n",
     "    return 'Logged out'\n",
+    "\n",
+    "app.run(host=\"0.0.0.0\", port=5000)\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b60e1f-2aea-4d0b-b025-afca2bac517e",
+   "id": "6f50ed58-e4ca-4f3b-9c07-a589576367ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8dfd06b-df97-4ce9-8a9d-db4116e346c8",
    "metadata": {},
    "outputs": [],
    "source": []
