--- a/04_advanced_topics_database_api.ipynb
+++ b/04_advanced_topics_database_api.ipynb
@@ -1481,11 +1481,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bfcde868-7626-4791-baf4-ef8ba2afc516",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution:\n",
@@ -1493,8 +1489,10 @@
     "from flask import Flask, request, redirect, url_for, render_template_string, send_file\n",
     "from flask_sqlalchemy import SQLAlchemy\n",
     "from flask_login import LoginManager, login_user, login_required, logout_user, current_user, UserMixin\n",
-    "import hashlib, threading, time, json, shutil, psutil, os\n",
+    "import hashlib, threading, time, json, psutil, os\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
     "\n",
     "app = Flask(__name__)\n",
     "app.secret_key = 'supersecret'\n",
@@ -1508,7 +1506,7 @@
     "    username = db.Column(db.String(80), unique=True)\n",
     "    password_hash = db.Column(db.String(128))\n",
     "\n",
-    "db.create_all()\n",
+    "\n",
     "\n",
     "@login_manager.user_loader\n",
     "def load_user(user_id):\n",
@@ -1554,23 +1552,56 @@
     "def usage():\n",
     "    with open(\"usage.jsonl\") as f:\n",
     "        lines = [json.loads(line) for line in f.readlines()[-60:]]\n",
-    "    cpu_vals = [entry[\"cpu\"] for entry in lines]\n",
     "    plt.figure()\n",
-    "    plt.plot(cpu_vals)\n",
+    "    plt.plot([entry[\"cpu\"] for entry in lines], label=\"CPU\")\n",
+    "    plt.plot([entry[\"disk\"] for entry in lines], label=\"Disk\")\n",
+    "    plt.plot([entry[\"mem\"] for entry in lines], label=\"RAM\")\n",
     "    plt.title(\"CPU Usage (last 60s)\")\n",
     "    plt.ylabel(\"%\")\n",
     "    plt.xlabel(\"Seconds ago\")\n",
+    "    plt.legend()\n",
     "    plot_path = \"static/plot.png\"\n",
     "    plt.savefig(plot_path)\n",
     "    plt.close()\n",
     "    return send_file(plot_path, mimetype='image/png')\n",
     "\n",
+    "@app.route('/')\n",
+    "@login_required\n",
+    "def dashboard():\n",
+    "    return \"\"\"\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta http-equiv=\"refresh\" content=\"1\">\n",
+    "    <title>Auto-Refresh Image</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            display: flex;\n",
+    "            justify-content: center;\n",
+    "            align-items: center;\n",
+    "            height: 100vh;\n",
+    "            margin: 0;\n",
+    "            background-color: #f5f5f5;\n",
+    "        }\n",
+    "        img {\n",
+    "            max-width: 100%;\n",
+    "            max-height: 100%;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <img src=\"/usage\" alt=\"Usage Image\">\n",
+    "</body>\n",
+    "</html>\n",
+    "\"\"\"\n",
+    "\n",
     "def monitor_usage():\n",
     "    while True:\n",
     "        usage = {\n",
-    "            \"disk\": shutil.disk_usage(\"/\").used,\n",
+    "            \"disk\": psutil.disk_usage(\"/\").percent,\n",
     "            \"cpu\": psutil.cpu_percent(),\n",
-    "            \"mem\": psutil.virtual_memory().used\n",
+    "            \"mem\": psutil.virtual_memory().percent\n",
     "        }\n",
     "        with open(\"usage.jsonl\", \"a\") as f:\n",
     "            f.write(json.dumps(usage) + \"\\n\")\n",
@@ -1582,7 +1613,9 @@
     "threading.Thread(target=monitor_usage, daemon=True).start()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)"
+    "    with app.app_context():\n",
+    "        db.create_all()\n",
+    "    app.run(debug=True)\n"
    ]
   },
   {
